package es.comprendia.entidad;

import io.quarkus.hibernate.orm.panache.PanacheEntity;
import jakarta.persistence.*;
import java.time.LocalDateTime;

@Entity
@Table(name = "asignaturas")
public class Asignatura extends PanacheEntity {

    @Column(nullable = false)
    public String nombre;

    @Column(columnDefinition = "TEXT")
    public String descripcion;

    // Nombre del profesor principal en texto (compatibilidad con datos antiguos)
    @Column
    public String profesor;

    // Profesor principal como relación (fuente de verdad)
    @ManyToOne(fetch = FetchType.LAZY, optional = true)
    @JoinColumn(name = "profesor_id")
    public Profesor profesorObj;

    @Column(name = "fecha_creacion", nullable = false)
    public LocalDateTime fechaCreacion;

    @Column(name = "fecha_actualizacion")
    public LocalDateTime fechaActualizacion;

    // ── Datos para la clasificación automática de vídeos ─────────────────────
    // Canal de YouTube asociado a esta asignatura (si todos sus vídeos vienen del mismo).
    @Column(name = "canal_youtube_id")
    public String canalYoutubeId;

    @Column(name = "canal_youtube_nombre")
    public String canalYoutubeNombre;

    // Palabras clave representativas del temario (texto libre separado por comas).
    @Column(name = "palabras_clave", columnDefinition = "TEXT")
    public String palabrasClave;

    // Embedding representativo de la asignatura (JSON de doubles). Se usa para
    // comparar por similitud semántica con vídeos nuevos. Opcional.
    @Column(name = "embedding_resumen", columnDefinition = "TEXT")
    public String embeddingResumen;
}
